--- a/school-program/style.css
+++ b/school-program/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   color: #333;
-  background-color: #1481db49;
+  background-color: #86b9e4;
   margin: 0;
   padding: 0;
 }
@@ -23,6 +23,18 @@ ul {
   margin-top: -15px;
   color: darkblue;
 
+}
+
+li {
+	margin: 10px, 3;
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-right: 0px;
+  margin-top: 10px;
+}
+
+li.jamal {
+  font-size: 5px;
 }
 
 h6 {
@@ -50,7 +62,7 @@ th, td {
 }
 
 th {
-  background-color: #4285f4;
+  background-color: #2c7af8;
   color: white;
 }
 
@@ -60,8 +72,4 @@ td {
 
 td.subject {
   font-weight: bold;
-}
-
-td.lunch {
-  background-color: #ffbb33;
 }
