--- a/school-program/style.css
+++ b/school-program/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   color: #333;
-  background-color: #86b9e4;
+  background-color: #5ab3fc;
   margin: 0;
   padding: 0;
 }
@@ -27,7 +27,7 @@ ul {
 
 li {
 	margin: 10px, 3;
-  font-size: 20px;
+  font-size: 10px;
   margin-bottom: 10px;
   margin-right: 0px;
   margin-top: 10px;
