--- a/school-program/style.css
+++ b/school-program/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   color: #333;
-  background-color: #5ab3fc;
+  background-color: #7bc0f8;
   margin: 0;
   padding: 0;
 }
